update PPO&DPO&GRPO [2025-0827-20:27]

--- a/大模型八股.md
+++ b/大模型八股.md
@@ -458,13 +458,164 @@ BPE 每次的迭代目标是找到 **频率最高** 的**相邻字符对**:
 
 ## DPO & PPO & GRPO
 
+- DPO：
+  - 没有 `reward model`与 `critical model`，直接对偏好数据对进行建模
+  -  训练时候只有便好数据对，没有多种回答采样
+  - off-policy
+- PPO
+  - 采用 `reward model`与 `critical model`进行优势函数建模
+  - 加载四个模型，更新两个模型参数，资源消耗大
+  - 可以基于多种采样回答进行训练(roll out)
+  - on-policy
+- GRPO
+  - 去掉`reward model`与 `critical model`训练
+  - 直接使用奖励函数计算奖励值
+  - 基于组件采样计算优势函数值
+  - 可以基于多种采样回答进行训练(roll out)
+
+
+
+### RLHF & PPO
+
+PPO 总共涉及到四个模型：如下图所示:
+
+<img src="https://s2.loli.net/2025/03/04/2iY9hZ8kU1Hr6Mj.png" alt="image-20250304171048192" style="zoom:67%;" />
+
+- 其中需要训练(更新参数的是 **Policy(Actor) Model** 和 **Value(Critic) Model)**
+
+- 需要先基于便好数据对训练Reward Model
+
+  - 模型输入一个句子(prompt + answer)，输出一个分数。
+
+  - 通过pair wise loss对模型进行训练，对一个pair的句子，对好的句子打分高，对坏的句子打分低。
+    $$
+    \text{loss} \mathrel{+}= -\frac{1}{N} \sum_{i=1}^{N} \log\left(\sigma(\hat{r}_i - r_i)\right)
+    $$
+
+    ```python
+    loss += -torch.log(torch.sigmoid(c_truncated_reward - r_truncated_reward)).mean()
+    ```
+
+    - 该模型输出两个值: 一个标量代表及时`reward`值：对输入的`prompt + answer`进行打分;一个向量`(B,L)`,第`i`个位置代表从该位置到最后每个位置的累积奖励值(状态函数值)，为后续`critic model`使用。
+
+      ```python
+      # 奖励模型返回的是个字典，key为chosen_end_scores位置存储数据维度为(B,)，表示对于prompt+answer的打分
+      reward_score = self.reward_model.forward_value(
+                      seq, attention_mask,
+                      prompt_length=self.prompt_length)['chosen_end_scores'].detach(
+                      )
+      #critic model返回的数据维度为(B,L)，L维度上第i个位置代表从i位置到最后的累积奖励
+      #舍去最后一个位置是因为句子“终止符”无意义 
+      values = self.critic_model.forward_value(
+                      seq, attention_mask, return_value_only=True).detach()[:, :-1]
+      ```
+
+- 为了防止模型输出的内容 `hack reward`，将`policy model`在`prompt`下输出的`answer`拼接在一起分别输入到 `policy model` 和 `ref model`中获取到`answer`位置的概率值，然后计算`KL散度`进行约束。
+
+- 对于 `answer`序列(`prompt`不需要计算状态函数值)的每个位置的 `reward`更新为上述的 `KL散度`，并且在最后一个位置加上整个 `prompt + answer`的打分值 。
+
+- 根据GAE(Generalized Advantage Estimation)优势函数计算优势值。
+  $$
+  \begin{align}
+  A_t^{\text{GAE}(\gamma, \lambda)} &= \sum_{l=0}^{\infty} (\gamma \lambda)^l \delta_{t+l}^V \\
+  \delta_t^V &= r_t + \gamma V(s_{t+1}) - V(s_t)
+  \end{align}
+  $$
+
+- 冻结`value model`，使用PPO/PPO2的优化目标公式，计算损失，梯度更新，优化`policy model`:
+  $$
+  \begin{align}
+  
+  J^{\theta^k}{\text{PPO}}(\theta) &= E_{(s_t, a_t) \sim \pi_{\theta'}} \left[ \frac{p_\theta(a_t \mid s_t)}{p_{\theta'}(a_t \mid s_t)} A^{\theta'}(s_t, a_t) - \beta \, KL(\theta, \theta') \right]\\
+  
+  
+  J^{{\theta^k}}_\text{PPO2}(\theta) &\approx \sum_{(s_t, a_t)} \min \left( \frac{p_\theta(a_t | s_t)}{p_{\theta^k}(a_t | s_t)} A^{\theta^k}(s_t, a_t), \ 
+  \text{clip} \left( \frac{p_\theta(a_t | s_t)}{p_{\theta^k}(a_t | s_t)}, 1 - \epsilon, 1 + \epsilon \right) A^{\theta^k}(s_t, a_t) \right)
+  
+  
+  \end{align}
+  $$
+  
+
+  - 直观上看当优势值大于0时，增加此时token的生成概率；直观上看当优势值小于0时，减小此时token的生成概率。
+  - 计算重要性采样系数:其中旧的`policy model`需要几个 `epoch`才会更新一次。
+
+  
+
+- 根据 TD 差分法优化 `critic model`，其中损失为`mse loss`
+  $$
+  \mathcal{L}_V = \frac{1}{2} \mathbb{E}_t \left[ \left( V(s_t) - (r_t + \gamma V(s_{t+1})) \right)^2 \right]
+  $$
+
+  - $ V(s_t)$ 是当前状态的价值估计，
+  - $r_t + \gamma V(s_{t+1})$ 是目标值（通过即时奖励和下一状态的价值估计计算得到的目标。
+  - 计算目标值冻结梯度，更新`critic model`参数让当前状态的价值估计拟合目标值
+
 
 
 ### DPO-直接偏好优化
 
-- **去掉reward model**，**直接使用偏好数据对**(一个query，有一个chosen回答和一个reject回答的数据集)进行目标函数建模实现**最大化chosen回答的概率，减小reject回答的概率**
+**通过利用奖励函数与最优策略之间的映射关系，证明这个受限的奖励最大化问题可以通过单阶段的策略训练来精确优化，本质上是在人类偏好数据上解决一个分类问题**
+
+- **不需要单独根据便好数据训练reward model**，**直接使用偏好数据对**(一个query，有一个chosen回答和一个reject回答的数据集)进行目标函数建模实现**增加chosen样本($y_w$)的对数概率**，**减小reject样本($y_l$)的对数概率**
+
 - **通过与reference model的概率比值**，限制模型更新过偏移reference model，学习到某种特定的策略实现最大化奖励导致reward hacking。
-- 隐式奖励函数建模：
+
+- 优化目标 & 求导: 
+  $$
+  \mathcal{L}{\text{DPO}}(\pi\theta; \pi_{\text{ref}}) = -\mathbb{E}{(x,y_w,y_l)\sim \mathcal{D}} \left[ \log \sigma \left( \beta \log \frac{\pi\theta(y_w | x)}{\pi_{\text{ref}}(y_w | x)} - \beta \log \frac{\pi_\theta(y_l | x)}{\pi_{\text{ref}}(y_l | x)} \right) \right]
+  $$
+
+  $$
+  \nabla_\theta \mathcal{L}_{\text{DPO}}(\pi_\theta; \pi_{\text{ref}}) = 
+  -\beta \mathbb{E}_{(x,y_w,y_l)\sim \mathcal{D}} \left[ 
+  \underbrace{\sigma(\hat{r}_\theta(x, y_l) - \hat{r}_\theta(x, y_w))}_{\text{higher weight when reward estimate is wrong}} 
+  \left[ 
+  \underbrace{\nabla_\theta \log \pi(y_w | x)}_{\text{increase likelihood of } y_w} - 
+  \underbrace{\nabla_\theta \log \pi(y_l | x)}_{\text{decrease likelihood of } y_l} 
+  \right] 
+  \right]
+  $$
+
+  
+
+  - 隐式奖励函数：
+    $$
+    \hat{r}\theta(x, y) = \beta \log \frac{\pi\theta(y | x)}{\pi_{\text{ref}}(y | x)}
+    $$
+
+- 直观解释:
+
+  - 优化DPO直接在偏好数据对上增加偏好数据的对数概率，减小非便好数据的对数概率
+
+  - 通过隐式奖励函数和缩放超参 $\beta$ 建立隐式奖励模型作为**梯度加权系数**, 代表隐式奖励模型认为**策略模型错误的程度**
+
+  - ref model作用: 相当于引入了一个**细粒度的Value Model**和一个**细粒度的[Reward Model](https://zhida.zhihu.com/search?content_id=249317057&content_type=Article&match_order=1&q=Reward+Model&zd_token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJ6aGlkYV9zZXJ2ZXIiLCJleHAiOjE3NTY0NDk0MTQsInEiOiJSZXdhcmQgTW9kZWwiLCJ6aGlkYV9zb3VyY2UiOiJlbnRpdHkiLCJjb250ZW50X2lkIjoyNDkzMTcwNTcsImNvbnRlbnRfdHlwZSI6IkFydGljbGUiLCJtYXRjaF9vcmRlciI6MSwiemRfdG9rZW4iOm51bGx9.mNdQgyyNz7NAaVCI61fIlsEZjXUfZJ4VzLJkneBCxaw&zhida_source=entity)**，等价于PPO中Advantage的计算
+    $$
+    \beta \log \frac{\pi^*(a_t|s_t)}{\pi_{\text{ref}}(a_t|s_t)} = r(s_t, a_t) + V^*(s_{t+1}) - V^*(s_t)
+    $$
+
+
+### GRPO
+
+与PPO对比如图：
+
+<img src="https://s2.loli.net/2025/02/24/a64urQnPjqBhegG.png" alt="image.jpeg" style="zoom:67%;" />
+
+- 去掉了`reward model`的训练，使用基于规则的奖励函数，例如格式正确，结果正确等等
+
+- 去掉了`critical model`，使用Group采样的方式计算优势函数值
+
+- 
+
+  - 具体来说对于每个`query`，GRPO 从旧策略 $π_{θold}$ 中采样一组输出 $[{o_1，o_2，…，o_G}]$，通过奖励函数计算每个采样的奖励制，通过均值归一化公式计算优势函数值:
+    $$
+    A_i = \frac{r_i - \text{mean}(\{r_1, r_2, \ldots, r_G\})}{\text{std}(\{r_1, r_2, \ldots, r_G\})}
+    $$
+
+  - 其余优化目标与PPO相同
+
+
 
 ## CLIP
 
@@ -717,162 +868,3 @@ class Attention(nn.Module):
   - 在不同的FPS采样不同的帧，并与绝对时间对齐。
 
 
-
-# 大模型面经
-
-
-
-# 简历
-
-## clip & attention
-
-```python
-import torch.nn as nn
-import torch
-class Attention(nn.Module):
-    def __init__(self, *args, **kwargs):
-        super().__init__(*args, **kwargs)
-        
-        self.head_num = args.head_num
-        self.hidden_size = args.hidden_size
-        if(self.hidden_size % self.head_num != 0):
-            raise ValueError("hidden_size should be divided by head_num")
-        self.head_dim = self.hidden_size // self.head_num
-        
-        self.wq = nn.Linear(self.hidden_size,self.hidden_size)
-        self.wk = nn.Linear(self.hidden_size,self.hidden_size)
-        self.wv = nn.Linear(self.hidden_size,self.hidden_size)
-        
-        
-        
-        
-    def forward(self,x:torch.Tensor,attention_mask:torch.Tensor):
-        # x:[bs,seq,hidden_size],mask:[bs,seq]
-        bs = x.shape[0]
-        seq_len = x.shape[1]
-        attention_mask = attention_mask.unsqueeze(1).unsqueeze(2)
-        attention_mask = (1-attention_mask)*(-torch.inf)
-        
-        query = self.wq(x).view(bs,seq_len,self.head_num,self.head_dim)
-        key = self.wk(x).view(bs,seq_len,self.head_num,self.head_dim)
-        value = self.wv(x).view(bs,seq_len,self.head_num,self.head_dim)
-        
-        # x.transpose
-        attention_score = torch.matmul(
-            query.transpose(1,2), #[bs,head,seq,hidden]
-            key.transpose(1,2).transpose(-1,-2) #[bs,head,hidden,seq]
-        )
-        attention_score = attention_score / torch.sqrt(self.hidden_size)
-        attention_score = attention_score + attention_mask
-        
-        attention_probs = nn.functional.softmax(attention_score,-1) #[bs,head,seq,seq]
-        
-        context_out = torch.matmul(attention_probs,value) #[bs,head,seq,hidden]
-        
-        context_out = context_out.transpose(1,2).contiguous().view(bs,seq_len,-1)
-        
-        return context_out
-    
-    
-
-class Attention_cache(nn.Module):
-    def __init__(self,head_num,hidden_size):
-        self.head_num = head_num
-        self.hidden_size = hidden_size
-        
-        self.head_dim = self.hidden_size // self.head_num
-        
-        if(self.hidden_size % self.head_num != 0):
-            raise ValueError('wrong head num')     
-        
-        self.wq = nn.Linear(hidden_size,hidden_size)
-        self.wk = nn.Linear(hidden_size,hidden_size)
-        self.wv = nn.Linear(hidden_size,hidden_size)
-        self.wo = nn.Linear(hidden_size,hidden_size)
-        
-        
-    def forward(self,x:torch.Tensor,attn_mask:torch.Tensor,past_key_value):
-        
-        # [bs,seq,hidden_size]
-        bs = x.shape[0]
-        seq_len = x.shape[1]
-        
-        query = self.wq(x).view(bs,seq_len,self.head_num,self.head_dim).transpose(1,2)
-        key = self.wk(x).view(bs,seq_len,self.head_num,self.head_dim).transpose(1,2)
-        value = self.wv(x).view(bs,seq_len,self.head_num,self.head_dim).transpose(1,2)
-        
-        if(past_key_value is not None):
-            key = torch.cat((past_key_value[0],key),dim=-2)
-            value = torch.cat((past_key_value[1],value),dim=-2)
-        past_key_value = (key,value)
-        
-        attention_scores = torch.matmul(query,key.transpose(-1,-2)) / torch.sqrt(self.hidden_size)
-        
-        if(attn_mask is not None):
-            attn_mask =  attn_mask.unsqueeze(1).unsqueeze(2)
-            attn_mask = (1-attn_mask)*(-1e7)
-            attention_scores = attention_scores + attn_mask  
-            
-        attention_probs = nn.functional.softmax(attention_scores,-1)
-        
-        
-        contex_value =  torch.matmul(attention_probs,value)
-        contex_value = contex_value.transpose(1,2).contiguous().view(bs,seq_len,-1)
-        
-        contex_value = self.wo(contex_value)     
-         
-        return contex_value,past_key_value
-```
-
-
-
-```python
-import torch.nn as nn
-import torch
-
-
-class clip(nn.Module):
-    def __init__(self, *args, **kwargs):
-        super().__init__(*args, **kwargs)
-        self.visual = kwargs['visual']
-        self.text_embedding = kwargs['text_embedding']
-        self.pe = kwargs['pe']
-        
-    
-    def encode_text(self,x):
-        '''
-            n,d
-        '''
-        ...
-    
-    def encode_img(self,x):
-        '''
-        n,d
-        '''
-        ...
-    def nce_loss(logits):
-            '''
-            n,n
-            '''
-            
-            deno = logits.exp().sum(-1) #n
-            num = torch.diag(logits.exp())
-            
-            loss = (torch.log(deno) - torch.log(num)).mean()
-            return loss
-        
-    def forward(self,x,y):
-        text = self.encode_text(x) #n,d
-        img = self.encode_img(y) #n,d
-        
-        # 计算余弦相似度
-        text = text / text.norm(dim=-1)
-        img = img / img.norm(dim=-1)
-        
-        text_matrix = torch.matmul(text,img.T) / self.temp #n,n
-        img_matrix = torch.matmul(img,text.T) / self.temp #n,n
-         
-        loss = (self.nce_loss(text_matrix) + self.nce_loss(img_matrix)) / 2
-        
-
-```
