update QwenVL & LLaMa & MoE & Deepspeed [2025-08-28-0:54]

--- a/大模型八股.md
+++ b/大模型八股.md
@@ -456,7 +456,7 @@ BPE 每次的迭代目标是找到 **频率最高** 的**相邻字符对**:
 
 
 
-## DPO & PPO & GRPO
+## 8. DPO & PPO & GRPO
 
 - DPO：
   - 没有 `reward model`与 `critical model`，直接对偏好数据对进行建模
@@ -533,15 +533,15 @@ PPO 总共涉及到四个模型：如下图所示:
   \text{clip} \left( \frac{p_\theta(a_t | s_t)}{p_{\theta^k}(a_t | s_t)}, 1 - \epsilon, 1 + \epsilon \right) A^{\theta^k}(s_t, a_t) \right)
   
   
-  \end{align}
+  \end{align}
   $$
   
-
+  
   - 直观上看当优势值大于0时，增加此时token的生成概率；直观上看当优势值小于0时，减小此时token的生成概率。
   - 计算重要性采样系数:其中旧的`policy model`需要几个 `epoch`才会更新一次。
-
   
-
+  
+  
 - 根据 TD 差分法优化 `critic model`，其中损失为`mse loss`
   $$
   \mathcal{L}_V = \frac{1}{2} \mathbb{E}_t \left[ \left( V(s_t) - (r_t + \gamma V(s_{t+1})) \right)^2 \right]
@@ -617,6 +617,14 @@ PPO 总共涉及到四个模型：如下图所示:
 
 
 
+## MOE
+
+- 多专家:替换单个FFN为多个专家。
+
+- 门控路由网络:输出一个分布，选取topk进行激活对应专家
+
+  <img src="https://s2.loli.net/2025/08/28/4boMqQz1EjhKNZd.png" alt="图片" style="zoom: 50%;" />
+
 ## CLIP
 
 1. 首先通过两个模态的encoder获取对应的模态embedding
@@ -665,6 +673,10 @@ class CLIP():
 
 
 ## Attention
+
+
+
+### 实现
 
 1. 初始化`hidden_size`，`head_num`, `head_dim`,`wq`,`wk`,`wv`,`wo`
 2. 首先计算`query`,`key`,`value`值，并调整shape为`(bsz,head_num,seq,head_dim)`:此时张量不连续
@@ -722,9 +734,9 @@ class Attention(nn.Module):
 
 
 
-# LlaMa
+## LLaMa
 
-## 1
+### LLaMa1
 
 - 去重,过滤低质量数据等操作
 
@@ -737,21 +749,17 @@ class Attention(nn.Module):
 
 - 采用KV cache
 
-
-
-## 2
+### LLaMa 2
 
 - 上下文长度 -> 4096
 - GQA 替换传统的 muti-head attention
 
-
-
-## 3
+### LLaMa 3
 
 - 上下文长度 -> 8192
 - 换成openai的tokenizer：tiktoken
 
-## 3.1
+### LLaMa 3.1
 
 - 上下文长度 -> 128k
 - 405B超大杯模型
@@ -759,112 +767,110 @@ class Attention(nn.Module):
 
 
 
-# MOE
+## Deepspeed
 
-- 门控网络:输出一个分布，选取topk进行激活对应专家
-- 多专家:替换单个FFN为多个专家。
+1. 参数分割策略
 
+   1. **流水线并行（Pipeline Parallel,PP）**：按照模型的**层（Layer）进行分割**，保留每一层（Layer）为整体，不同层存储在不同的 GPU 中， 多个层（GPU）串行在一起，需要串行执行。
+      1. 时间效率很差， 并且如果某一层的参数量就很大并超过了单卡的显存就尴尬。
+      2. 可以通过异步执行一定程度解决时间效率差的问题。
+   2. **张量并行（Tensor Parallel,TP）**:
+      1.  把参数张量切开，切开张量分开存储
+      2. 但切开之后，张量计算的时候可以分两种策略。
+         1.  张量的计算过程也是可以切割，这样把一个大的张量，切分成多个小张量，**每张 GPU 卡只保存一个小片段**，**每个小张量片段（GPU卡）独立进行相关计算**，最后在需要的时候合并结果就行了 Megatron 就是走的这个路线。
+         2. 同样是把参数张量分割，**每张卡只保存一个片段。但是需要计算的时候，每张卡都从其他卡同步其它片段过来**，恢复完整的参数张量，再继续数据计算。**Deepspeed** 选取的这个策略，**这个策略实现起来更简单一些。**
 
+2. 模型并行: **流水线并行**，**张量并行**(不同的参数分割策略)。
+   1. 把模型一次完整的计算过程（前后向）分拆到多个 GPU 上进行。
 
-# Deepspeed & Accelerate
+3. 数据并行:pytorch 的 Data Parallel (DP) 和 Distributed Data Parallel (DDP)
+   1. 每张卡都能进行模型一次完整前后向计算，只是每张卡处理不同的训练数据批次（batch）。
 
-1. Deepspeed:
-   1. 参数分割策略
-      1. 按照模型的层（Layer）进行分割，保留每一层（Layer）为整体，不同层存储在不同的 GPU 中， 多个层（GPU）串行在一起，需要串行执行，这就是所谓的 **流水线并行****（Pipeline Parallel,PP）**。时间效率很差， 并且如果某一层的参数量就很大并超过了单卡的显存就尴尬。当然可以通过异步执行一定程度解决时间效率差的问题，有兴趣的读者可以研读相关资料。
-      2. 把参数张量切开，切开张量分开存储很容易，但切开之后，张量计算的时候怎么办？这里可以分两种策略。 1. 张量的计算过程也是可以切割，这样把一个大的张量，切分成多个小张量，每张 GPU 卡只保存一个小片段，每个小张量片段（GPU卡）独立进行相关计算，最后在需要的时候合并结果就行了。这种思路就称为 **张量并行****（Tensor Parallel,TP）** , Megatron 就是走的这个路线。 2. 同样是把参数张量分割，每张卡只保存一个片段。但是需要计算的时候，每张卡都从其他卡同步其它片段过来，恢复完整的参数张量，再继续数据计算。Deepspeed 选取的这个策略，这个策略实现起来更简单一些。
-   2. 模型并行:流水线并行，张量并行(不同的参数分割策略)。
-      1. 把模型一次完整的计算过程（前后向）分拆到多个 GPU 上进行
-   3. 数据并行:pytorch 的 Data Parallel (DP) 和 Distributed Data Parallel (DDP)
-      1. 每张卡都能进行模型一次完整前后向计算，只是每张卡处理不同的训练数据批次（batch）。
-   4. deepspeed 对参数进行了分割，每张卡存储一个片段，但在进行运算时， 每张卡都会恢复完整的参数张量，每张卡处理不同的数据批次， 因此 deepspeed **属于数据并行**。
-   5. 不同级别
-      1. ZeRO-0：禁用所有类型的分片，仅使用 DeepSpeed 作为 DDP (Distributed Data Parallel)
-      2. ZeRO-1：分割Optimizer States，减少了4倍的内存，通信容量与数据并行性相同
-      3. ZeRO-2：分割Optimizer States与Gradients，8x内存减少，通信容量与数据并行性相同
-      4. ZeRO-3：分割Optimizer States、Gradients与Parameters，内存减少与数据并行度和复杂度成线性关系。
-      5. ZeRO-Infinity是ZeRO-3的拓展。允许通过使用 NVMe 固态硬盘扩展 GPU 和 CPU 内存来训练大型模型。ZeRO-Infinity 需要启用 ZeRO-3。
-   6. DeepSpeed提供了多种优化策略和工具,其中ZeRO和Offload是两种重要的技术,它们有以下主要区别:
-      1. 优化目标:
-         1. ZeRO (Zero Redundancy Optimizer) 主要目标是减少模型状态(参数、梯度、优化器状态)的内存占用。
-         2. Offload 则专注于将部分计算和内存负载从GPU转移到CPU或NVMe上。
-      2. 实现方式:
-         1. ZeRO 通过在数据并行进程间分割模型状态来减少内存占用,有**ZeRO-1、ZeRO-2和ZeRO-3**三个阶段。
-         2. Offload 将优化器状态和梯度卸载到CPU内存,同时利用高效的CPU优化器实现。
-2. Accelerate
-   1. Accelerate是Hugging Face推出的一个库，旨在简化和加速PyTorch模型在多GPU和多机环境下的训练过程。它的主要功能包括：
-      1. **多设备支持**：支持单机多GPU、多机多GPU的分布式训练。
-      2. **易用性**：提供简单的API，用户只需对原有的训练代码做少量修改，即可实现分布式训练。
-      3. **兼容性**：兼容现有的PyTorch生态系统，可以与其他PyTorch库无缝集成。
-3. Accelerate和DeepSpeed都是用于分布式训练的框架,但它们在多机多卡训练方面有一些主要区别:
-   1. 支持的模型规模:DeepSpeed支持更大规模的模型训练。它提供了更多的优化策略和工具,如ZeRO和Offload,可以处理超大模型.
-   2. 配置复杂度:Accelerate的配置相对简单,对大多数模型可以开箱即用。DeepSpeed则需要更详细的配置,但提供了更多的优化选项.
-   3. 并行策略:Accelerate主要使用简单的管线并行(Pipeline Parallelism)。DeepSpeed支持更复杂的并行策略,如张量并行(Tensor Parallelism).
-   4. 启动方式:使用Accelerate时,通常需要在每台机器上单独启动训练脚本。而DeepSpeed可以使用pdsh工具,只需在一台机器上运行脚本,就能自动将命令和环境变量推送到其他节点.
-   5. 性能优化:DeepSpeed提供了更多的性能优化选项,如融合CUDA核函数,可以实现更快的推理速度.
-   6. 灵活性:Accelerate对于大多数模型来说更容易使用和适配。DeepSpeed则提供了更多的定制化选项,但可能需要更多的开发工作来适配特定模型.
+4. deepspeed 对参数进行了分割，每张卡存储一个片段，**但在进行运算时， 每张卡都会恢复完整的参数张量**，每张卡处理不同的数据批次， 因此 deepspeed **属于数据并行**。
 
-# Qwen系列
+5.  deepspeed不同级别机制
+   1. ZeRO-0：禁用所有类型的分片，仅使用 DeepSpeed 作为 DDP (Distributed Data Parallel)
+   2. ZeRO-1：**分割Optimizer States，减少了4倍的内存**，通信容量与数据并行性相同
+   3. ZeRO-2：**分割Optimizer States与Gradients，内存减少8倍**，通信容量与数据并行性相同
+   4. ZeRO-3：**分割Optimizer States、Gradients与 Model Parameters**，内存减少与数据并行度和复杂度成线性关系。
+   5. ZeRO-Infinity：是ZeRO-3的拓展。允许通过使用 **NVMe 固态硬盘扩展** GPU 和 CPU 内存来训练大型模型。ZeRO-Infinity 需要启用 ZeRO-3。
 
+6. DeepSpeed提供了多种优化策略和工具,其中ZeRO和Offload是两种重要的技术,它们有以下主要区别:
+   1. 优化目标:
+      1. ZeRO (Zero Redundancy Optimizer) ：主要目标是减少模型状态(参数、梯度、优化器状态)的内存占用。
+      
+      2. Offload：则专注于将部分计算和内存负载从**GPU转移到CPU或NVMe上。**
+      
+         
 
+## Qwen-VL系列
 
-## Qwen  VL
+### Qwen-VL-Chat
 
 - LLM：Qwen-7B
 
 - ViT：Openclip: ViT-bigG(1.9b)，
 
-  - 使用一个**适配器**压缩图像的token序列长度:一个固定序列长度的(256)可学习的**Query**参数矩阵的cros-attention模块，图像序列作为**Key**。将图像序列压缩到固定的256。
-
-  - 可以感知位置信息，**2d绝对位置编码。**
-
-  - 正弦余弦绝对位置编码向量中，向量中每个元素的位置都是当前 token 的位置(t)
-
-  - ![image-20250307162818379](https://s2.loli.net/2025/03/07/8rQKN6LHmbopDyx.png)
-
-  - 2d绝对位置编码中，位置编码向量维度切割成一半，代表2d的坐标数量。每一办单独做一个1d绝对位置编码。
-
-    ![image-20250307163319761](https://s2.loli.net/2025/03/07/kdy4ap6tnOjvUuP.png)
-
-    
-
+  1. 使用一个**适配器**压缩图像的token序列长度:一个固定序列长度的(256)可学习的**Query**参数矩阵的cros-attention模块，图像序列作为**Key**。**将图像序列压缩到固定的256。**
+  2. 可以感知位置信息，**2d绝对位置编码。位置编码向量维度切割成一半**，代表2d的坐标数量。**每一半单独做一个1d绝对位置编码。**
+  
+  <img src="https://s2.loli.net/2025/03/07/kdy4ap6tnOjvUuP.png" alt="image-20250307163319761" style="zoom:50%;" />
+  
+  
+  
 - 训练
 
-  - 第一步冻结LLM训练ViT与适配器 (PT)
-  - 第二步训练LLM+ViT+适配器+LLM (PT)
-  - 第三部训练适配器+LLM (SFT)
+  - 第一步冻结LLM训练 **ViT与适配器** (PT)
+  - 第二步训练 **LLM+ViT+适配器** (PT)
+  - 第三部训练 **适配器+LLM** (SFT)
 
-## Qwen2-VL
+### Qwen2-VL
 
-- 更小的视觉编码器: 675M
-- 更多的模型尺寸
+1. 更小的视觉编码器: 675M
 
-- 去掉了适配器，采用原生动态分辨率。为了减少token，采用MLP层进行merge，将2*2的 patch token压缩为1个token。
+2. 更多的模型尺寸: 2B,7B,72B
 
-- 图文数据与视频数据混合训练
+3. 去掉了**适配器**，采用原生动态分辨率。为了减少token，采用**MLP层进行merge，将2*2的 patch token压缩为1个token。**
 
-  - 采用深度为2的3D卷积，图片会复制一张，但是没有增加图片的patch即token数量，而是相当于将两张图片叠在一起增加了图片每个patch token的embedding维度
+4. **图文数据与视频数据混合训练**
 
-- 设计了多模态旋转位置嵌入
+5. 采用深度为2的3D卷积，图片会复制一张，但是没有增加图片的patch即token数量，而是相当于将两张图片叠在一起**增加了图片每个patch token的embedding维度**
 
-  - 2d: 二维坐标获得位置编码，两两一组变为4,4一组
+6. 设计了多模态旋转位置嵌入
 
-  - 3d:三维坐标获得位置编码,6-6一组进行旋转
+   - 2d: 二维坐标获得位置编码，两两一组变为4,4一组
 
-    <img src="https://s2.loli.net/2025/03/07/nOAbmH3p9sVI7de.png" alt="image-20250307164852924" style="zoom: 67%;" />
+   - 3d:三维坐标获得位置编码,6-6一组进行旋转
 
-
+     <img src="https://s2.loli.net/2025/03/07/nOAbmH3p9sVI7de.png" alt="image-20250307164852924" style="zoom: 50%;" />
 
 - 训练
-  - 训练ViT+MLP，冻结LLM
-  - 训练所有
-  - 训练LLM与MLP连接层。
+  - 训练**ViT+MLP**，冻结LLM（PT）
+  - 训练**所有** （PT）
+  - 训练**LLM与MLP**连接层。
 
-## Qwen-2.5-VL
+###  Qwen-2.5-VL
 
-- 与LlaMa对齐:RMSNorm，SwiGLU激活函数
-- window attention:只在一个window中做attention
+- 与LLaMa对齐:RMSNorm，SwiGLU激活函数
+
+- window attention:只在一个window中做attention而非全局序列进行attention，有效减少了 ViT 端的计算负担，提高了训练和推理速度。
+
 - 绝对时间对齐: 动态FPS采样
-  - 将视频三维位置id中的id与绝对时间对齐，而不是与帧对齐。(同一帧id在不同的FPS下代表的是不同的时间，与时间对齐不存在这个问题)
-  - 在不同的FPS采样不同的帧，并与绝对时间对齐。
-
+  - 将视频三维位置**id与绝对时间id对齐**，**而不是与帧序列索引对齐**。
+  
+  - 同一帧索引id在不同的FPS下代表的是不同的时间，与时间对齐不存在这个问题
+  
+  - 假设视频长度为 `8s`，`temperal_merging_size = 2`, `tokens_per_second = 2`
+  
+    - 在0.5fps采样，采取到4帧图像，通过merge后为2帧图像
+      - 采用原始索引编码：[0,1]
+      - 采用与时间id对齐编码: [0,15] (首位帧采样+均匀分布)
+    - 在1fps采样，采取到8帧图像，通过merge后为4帧图像
+      - 采用原始索引编码：[0,1,2,3]
+      - 采用与时间id对齐编码: [0,5,10,15] (首位帧采样+均匀分布)
+    - 在2fps采样，采取到16帧图像，通过merge后为8帧图像
+      - 采用原始索引编码：[0,1,2,3,4,5,6,7]
+      - 采用与时间id对齐编码: [0,2,4,6,9,11,13,15] (首位帧采样+均匀分布)
+  
+    ![image-20250828003109263](https://s2.loli.net/2025/08/28/6op7YqgStLAdNTh.png)
 
