update FFN & attention d_k [2025-08-29-19:40]

--- a/大模型八股.md
+++ b/大模型八股.md
@@ -454,9 +454,19 @@ BPE 每次的迭代目标是找到 **频率最高** 的**相邻字符对**:
 
 
 
+##  8. FFN的作用
+
+- Attention, FFN, ResNet三者去掉任何一个transformer模型都会变得不可用
+  - Attention 进行信息的提取和聚合，残差连接提供信息宽带，提升网络深度。
+  - FFN通过线性变化(升维之后降维) 学习高纬度的抽象语义知识和记忆能力，通过非线性激活函数提升模型表达能力同时创造了一种稀疏性。
 
 
-## 8. DPO & PPO & GRPO
+
+## 9. 
+
+
+
+## DPO & PPO & GRPO
 
 - DPO：
   - 没有 `reward model`与 `critical model`，直接对偏好数据对进行建模
@@ -674,7 +684,19 @@ class CLIP():
 
 ## Attention
 
+### 原理
 
+$$
+\text{Attention}(Q, K, V) = \text{softmax}\left(\frac{QK^T}{\sqrt{d}}\right)V
+$$
+
+####  1. 为什么需要处以$\sqrt{d}$：
+
+1. 随着特征向量维度的增大，${QK^T}$ 计算的值的方差会变大(假设每个维度为独立同分布，则方差和维度长度成正比)，分布过于集中导致经过 `sofrmax`后退化成了 `argmax`即某个位置为1，其他位置都是0，导致反向传播过程中梯度消失。
+
+2. 通过处以$\sqrt{d}$后，在维度上平均了特征向量的方差，使得分布变得更加均匀；相当于一个温度系数，提高温度系数(维度 $d$ >> 1 )
+
+   
 
 ### 实现
 
