update ROC AUC &PPL BLEU ROUGE & GRPO 缺点

--- a/大模型八股.md
+++ b/大模型八股.md
@@ -822,6 +822,165 @@ $$
 
 
 
+## 17. ROC曲线 & AUC值
+
+### ROC曲线
+
+- X坐标：FPR(伪正率):**所有负例样本**中被模型**预测为正例**的比率
+
+- X坐标：TPR(真正率):**所有正例样本**中被模型**预测为正例**的比率
+- 使用不同的阈值得到不同的(FPR,TPR)绘制的曲线叫做ROC曲线
+- 当阈值为1时，所有结果预测为错误，经过(0,0)；当阈值为0时，所有结果预测为正确经过(1,1)
+
+
+
+### AUC值
+
+Area Under Curve，定义为ROC曲线下的面积
+
+- 使用AUC值作为评价标准：是因为很多时候ROC曲线并不能清晰的说明哪个分类器的效果更好，而作为一个数值，**对应AUC更大的分类器效果更好**。
+- **AUC的含义为**：**正样本分数高于负样本的概率**
+- 从AUC判断分类器（预测模型）优劣的标准：
+  - AUC = 1，是完美分类器，采用这个预测模型时，存在至少一个阈值能得出完美预测。绝大多数预测的场合，不存在完美分类器。
+  - 0.5 < AUC < 1，优于随机猜测。这个分类器（模型）妥善设定阈值的话，能有预测价值。
+  - AUC = 0.5，跟随机猜测一样（例：丢铜板），模型没有预测价值。
+  - AUC < 0.5，比随机猜测还差；但只要总是反预测而行，就优于随机猜测。
+
+## 18. 衡量大模型评估指标
+
+### 困惑度(Perplexity)
+
+对于一个测试序列 w₁, w₂, ..., wₙ，困惑度定义为：
+
+$$
+\text{PPL} = \exp\left(-\frac{1}{N} \sum_{i=1}^{N} \log P(w_i|w_1,\ldots,w_{i-1})\right)
+$$
+其中：
+
+- $N$ 是序列长度
+- $P(w_i|w_1,\ldots,w_{i-1})$ 是在给定前文条件下预测第$i$个词的概率
+
+直观理解:
+
+- **困惑度越低**：模型对数据越"不困惑"，预测能力越强
+- **困惑度越高**：模型越"困惑"，预测能力越弱
+- 困惑度可以理解为：平均而言，模型在每个位置需要在多少个等概率选择中做决定
+- 交叉熵的指数：交叉熵损失越低，困惑度越低；
+
+
+
+
+
+
+
+### BLEU 分数
+
+- 常用于机器翻译，参考译文质量的指标
+
+- 公式：
+  $$
+  \text{BLEU-N} = \text{BP} \cdot \exp\left(\frac{1}{N} \sum_{n=1}^{N} \log p_n\right)
+  $$
+
+  - $\text{BP}$ 是简洁性惩罚 (Brevity Penalty)：当模型输出比参考文本长时BP=1,不需要惩罚。
+    $$
+    \text{BP} = \begin{cases}
+    1 & \text{if } c > r \\
+    e^{(1-r/c)} & \text{if } c \leq r
+    \end{cases}
+    $$
+
+    - $c$ 是候选译文的长度
+    - $r$ 是最接近候选译文长度的参考译文长度
+
+  - $N$ 是考虑的最大n-gram长度（通常 $N=4$）
+
+  - $w_n$ 是第 $n$ 个n-gram的权重（通常 $w_n = \frac{1}{N}$）
+
+  - $p_n$ 是n-gram精确度：即预测文本中的正确的n-gram所占比例
+
+    
+
+
+
+### ROUGE 分数
+
+**ROUGE**（Recall-Oriented Understudy for Gisting Evaluation）是一组用于评估**自动摘要**或**翻译质量**的指标，通过比较生成摘要与人类参考摘要之间的重叠情况来衡量质量。
+
+- 主要关注**召回率**：候选摘要覆盖了多少参考摘要的内容
+- 支持多种匹配粒度：n-gram、词序列、词汇等
+- 适用于摘要评估、文档生成等任务
+
+其主要变体包括：
+
+- **ROUGE-N**（n-gram 重叠）
+- **ROUGE-L**（最长公共子序列 LCS）
+
+2.1 ROUGE-N (n-gram共现统计)
+
+- 召回率公式
+  $$
+  \text{ROUGE-N}_{\text{recall}} = \frac{\sum_{S \in \{\text{RefSummaries}\}} \sum_{\text{gram}_n \in S} \text{Count}_{\text{match}}(\text{gram}_n)}{\sum_{S \in \{\text{RefSummaries}\}} \sum_{\text{gram}_n \in S} \text{Count}(\text{gram}_n)}
+  $$
+
+- 精确率公式
+  $$
+  \text{ROUGE-N}_{\text{precision}} = \frac{\sum_{S \in \{\text{RefSummaries}\}} \sum_{\text{gram}_n \in S} \text{Count}_{\text{match}}(\text{gram}_n)}{\sum_{\text{gram}_n \in \text{CandSummary}} \text{Count}(\text{gram}_n)}
+  $$
+
+- F1分数
+  $$
+  \text{ROUGE-N}_{F1} = \frac{2 \times \text{ROUGE-N}_{\text{precision}} \times \text{ROUGE-N}_{\text{recall}}}{\text{ROUGE-N}_{\text{precision}} + \text{ROUGE-N}_{\text{recall}}}
+  $$
+  
+
+  
+
+其中：
+
+- $\text{Count}_{\text{match}}(\text{gram}_n)$ 是在候选摘要和参考摘要中都出现的n-gram数量
+- $\text{Count}(\text{gram}_n)$ 是n-gram的总数量
+
+
+
+### 2.2 ROUGE-L (最长公共子序列)
+
+基于最长公共子序列（LCS）的ROUGE分数：
+
+- LCS召回率
+  $$
+  R_{lcs} = \frac{\text{LCS}(X, Y)}{m}
+  $$
+
+- LCS精确率
+  $$
+  P_{lcs} = \frac{\text{LCS}(X, Y)}{n}
+  $$
+  
+
+- LCS F分数
+  $$
+  F_{lcs} = \frac{(1 + \beta^2) R_{lcs} P_{lcs}}{R_{lcs} + \beta^2 P_{lcs}}
+  $$
+  
+
+其中：
+
+- $X$ 是长度为 $m$ 的参考摘要序列
+- $Y$ 是长度为 $n$ 的候选摘要序列
+- $\text{LCS}(X, Y)$ 是最长公共子序列的长度
+- $\beta$ 控制精确率和召回率的权重（通常 $\beta = 1$）
+
+
+
+
+
+
+
+
+
+
+
 ## DPO & PPO & GRPO
 
 - DPO：
