update DAPO GSPO [2025-09-02-16:56]

--- a/大模型八股.md
+++ b/大模型八股.md
@@ -933,7 +933,7 @@ $$
   \text{ROUGE-N}_{F1} = \frac{2 \times \text{ROUGE-N}_{\text{precision}} \times \text{ROUGE-N}_{\text{recall}}}{\text{ROUGE-N}_{\text{precision}} + \text{ROUGE-N}_{\text{recall}}}
   $$
   
-
+  
   
 
 其中：
@@ -943,7 +943,7 @@ $$
 
 
 
-### 2.2 ROUGE-L (最长公共子序列)
+### ROUGE-L (最长公共子序列)
 
 基于最长公共子序列（LCS）的ROUGE分数：
 
@@ -957,7 +957,6 @@ $$
   P_{lcs} = \frac{\text{LCS}(X, Y)}{n}
   $$
   
-
 - LCS F分数
   $$
   F_{lcs} = \frac{(1 + \beta^2) R_{lcs} P_{lcs}}{R_{lcs} + \beta^2 P_{lcs}}
@@ -973,11 +972,11 @@ $$
 
 
 
+## 19. Left padding 与 Right padding
 
-
-
-
-
+- **结论**: **训练**时一般使用 **right padding**，**推理**的时候一般使用**left padding**
+- **训练**：原理上使用left，right没有区别，因为可以设置ignore_idx忽略掉padding位置的loss计算；但是某些huggingface某些tokenizer使用的是absolute position id，即如果left padding会导致非padding开始token的position id不是0。
+- **推理**：由于LLM是decoder only架构，生成的时候基于**next token prediction**进行生成，如果使用 right padding会导致结尾的padding token影响生成任务。
 
 
 
@@ -1140,7 +1139,82 @@ PPO 总共涉及到四个模型：如下图所示:
 
   - 其余优化目标与PPO相同
 
+- 深度解析
 
+  - policy model优化目标的梯度为：
+    $$
+    \nabla_\theta J^{\theta^k}{\text{PPO}}(\theta) = E{(s_t, a_t) \sim \pi_{\theta'}} \left[ \frac{p_\theta(a_t \mid s_t)}{p_{\theta'}(a_t \mid s_t)} \nabla_\theta \log p_\theta(a_t \mid s_t) A^{\theta'}(s_t, a_t) - \beta , \nabla_\theta KL(\theta, \theta') \right]
+    $$
+    
+
+  - 由于优势函数的计算是**基于整个序列的reward**，因此理论上一个序列中的每个token的优势值$A$是相同的，具有稀疏性，此时梯度的主要共享是前面的重要性采样系数
+
+    - 如果该系数为1，那么不考虑KL散度的情况下**每个token就只剩下了相同的优势值，其实这样就退化成了SFT训练的交叉熵梯度，也就是每个token是具有相同奖励的行为克隆**
+    - **从强化学习策略梯度定理角度来看，RL相对于SFT梯度公式最大的区别在于每个动作（token）是具备不同优势值的。**
+
+- 缺点
+
+  - **熵坍塌：**强化学习一直强调的“探索”与“利用”中的“探索”，“探索”在强化学习训练中是十分重要的，如果模型想获得更有的策略决策能力，也就是**在不同状态下需要去选择更优的动作就需要去“探索”新的动作带来的收益**，因为强化学习训练本身就是**一个通过不断试错来找到最优解的过程**，如果在强化学习训练过程中让策略模型（也就是Actor/Policy模型）没有足够的“探索”能力（只在少量的输出中训练，这样使得模型输出分布变得越来越尖锐，模型分布会变得集中，分布的熵会变小）那模型就不会找的更好的路径，就会造成所谓的“熵坍塌”。
+  - **训练不稳定**：训练过程中梯度更新波动，无法收敛
+  - **奖励噪声：**由于GRPO极度依赖奖励函数，GRPO中对过长的回答设置了长度惩罚奖励会导致正确的回答因为长度过长被惩罚；并且对于大多数实际任务来说，奖励函数是需要多方面权衡的，很难找到一个标准化的奖励函数去做奖励判断；奖励函数可能会引来噪声干扰训练
+  - **序列级别建模**：优势函数的计算是**基于整个序列的reward**，但是**概率的优化是逐token**的，即 $\log p_\theta(a_t \mid s_t)$是对单个token的生成概率的优化
+
+
+
+
+
+### DAPO
+
+**解耦裁剪和动态采样策略优化（DAPO）算法**，针对GRPO提出了4个技术进行优化
+
+- **裁剪偏移**（[Clip-Shifting](https://zhida.zhihu.com/search?content_id=242916111&content_type=Article&match_order=1&q=Clip-Shifting&zd_token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJ6aGlkYV9zZXJ2ZXIiLCJleHAiOjE3NTY5NjcwNjMsInEiOiJDbGlwLVNoaWZ0aW5nIiwiemhpZGFfc291cmNlIjoiZW50aXR5IiwiY29udGVudF9pZCI6MjQyOTE2MTExLCJjb250ZW50X3R5cGUiOiJBcnRpY2xlIiwibWF0Y2hfb3JkZXIiOjEsInpkX3Rva2VuIjpudWxsfQ.d4pObU_RuMzwUjuMBMtjFJekgyLnJXJaUi4eCg4Bi6Y&zhida_source=entity)）：DAPO中直接去掉了KL散度，增强RL过程中的探索能力；使用$PPO_2$中的clip方法进行约束：并且对clip中的**上下界使用不同的阈值**：**上界$\epsilon_{high}$大**，**下界$\epsilon_{low}$小 鼓励模型进行探索学习，防止熵坍塌**
+  $$
+  \text{clip} \left( \frac{p_\theta(a_t | s_t)}{p_{\theta^k}(a_t | s_t)}, 1 - \epsilon, 1 + \epsilon \right) A^{\theta^k}(s_t, a_t)
+  $$
+  
+
+  - 如果clip函数的上界限不高，则重要性采样系数会被限制的不高，参考**policy model优化目标的梯度公式**，模型会更加注重高概率token部分的更新，低概率token的共享偏低，缺乏探索熵坍塌(分布变得集中)。
+  - $\epsilon_{low}$也不能过大，否则也会出现熵坍塌
+  - 举个例子：比如旧策略采样到某个token的概率是0.9，按照裁剪上限1.2计算$(1 + \epsilon)$，则新策略采样到该token的概率是接近于1（0.9\*1.2 但最大为1），注意新策略是我们训练目标函数期望的概率分布，也就是说**旧策略中本身高概率的那些token是不容易被上限裁剪的**，哪怕新策略下这个token采样概率很高了也容易被裁剪。反之当旧策略采样到某个token概率是0.1时（一般情况下低概率token不容易被采样到，但强化训练Rollout会具备一定随机性），如果同样的现在裁剪上限是1.2，那么新策略下这个token最高的采样概率也就是0.1*1.2=0.12，也就是说对于**旧策略概率低的token，即使训练后这个token的采样概率也不会有很大提升，因为提升上限被裁剪限制了**。这样一对比，（0.99-0.9）>> (0.12-0.1)是不是就很明显的看到差距了，这也是为什么DAPO要提升裁剪上限，因为不这样做的话，本来旧策略模型采样**概率高的token会随着训练变得采样概率越来越高，而低的token只会有很小的提升**，**那么结果就是模型输出的分布越来越尖锐，也就使得分布的熵变低，造成熵坍塌现象。**
+
+- **动态采样（Dynamic Sampling）**：设置了采样结果的范围 :$[0,G]$比如$G=32$，意思是限制一组采样结果中正确的个数大于0，并且小于$G$；也就是采样的结果不能全错也不能全对，保证多样性，提高训练稳定性
+
+- **溢出奖励塑造**[Overflowing Reward Shaping]：GRPO中对长序列的裁剪直接进行惩罚，引入了奖励噪声；采用**软性超长惩罚机制**：对于超过最大值的长度的序列设置-1奖励，设置一个缓存区间用于捕捉长序列中回答正确但是长度过长的问题，在这个区间使用线性的惩罚:
+  $$
+  R_{\text{length}}(y) = \begin{cases}
+  0, & |y| \leq L_{\max} - L_{\text{cache}} \\
+  \frac{(L_{\max} - L_{\text{cache}}) - |y|}{L_{\text{cache}}}, & L_{\max} - L_{\text{cache}} < |y| \leq L_{\max} \\
+  -1, & L_{\max} < |y|
+  \end{cases}
+  $$
+  
+
+- **Token级策略梯度损失**（Token-Level Policy Gradient Loss）：GRPO中对优化目标的中损失建模过程是先对一个回答中的每个token求平均，再对所有回答求平均，这会导致长序列的约束减弱；DAPO中对所有的回答的所有token的优化目标损失求均值
+  $$
+  \begin{align}
+  \text{GRPO:} \quad &\frac{1}{G} \sum_{i=1}^{G} \frac{1}{|o_i|} \sum_{t=1}^{|o_i|} \\
+  \text{DAPO:} \quad &\frac{1}{\sum_{i=1}^{G} |o_i|} \sum_{i=1}^{G} \sum_{t=1}^{|o_i|}
+  \end{align}
+  $$
+
+  - 举例：假设 $G$ 大小为2，**一个序列token长度为100**，这个序列的优势值是1，**另一个token序列长度为10**，这个序列的优势值为-1，为简单起见不考虑裁剪，重要性采样修正的操作。**如果使用GRPO计算，则最后的结果为0**（此时只代表目标函数值标量为0，但反向传播是看的梯度，梯度一般不为0），而如果使用DAPO计算则结果为$\frac{90}{110}$，在计算过程中能感受到如果使用**GRPO的方法是没有考虑token粒度**的，也就是说在同一个样本中每个token所占的权重系数随着token长度的增加而减小，这样的话模型输出**序列的长度越长，每个token在训练中对应的概率调整的幅度就越小。**
+
+  
+
+### GSPO
+
+GRPO的重要性采样参数修正粒度不对: **GRPO中是对序列中每个token进行的重要性采样，因为动作的粒度是token(逐token计算概率)，但是奖励却是对整个序列的奖励，这样会造成一种逻辑冲突的问题。**
+
+- GSPO将重要性采样系数调整为了序列的维度: 优势值的计算仍然是在一组回答的序列维度进行计算，这里$s_i(\theta)$代表的**是一个序列中每个token的重要性采样累乘后的值**进行**几何平均**，也就是说括号中的重要性采样参数（注意的下缀中不再有$t$）是这个序列中每个token的**重要性采样修正项的乘积结果**。
+  $$
+  \begin{align}
+  \mathcal{J}_{\text{GSPO}}(\theta) &= \mathbb{E}_{x \sim \mathcal{D}, \{y_i\}_{i=1}^G \sim \pi_{\theta_{\text{old}}}(\cdot|x)} \left[ \frac{1}{G} \sum_{i=1}^G \min \left( s_i(\theta) \hat{A}_i, \text{clip}(s_i(\theta), 1 - \varepsilon, 1 + \varepsilon) \hat{A}_i \right) \right] \\
+  \text{其中：}
+  \hat{A}_i &= \frac{r(x, y_i) - \text{mean}\left(\{r(x, y_i)\}_{i=1}^G\right)}{\text{std}\left(\{r(x, y_i)\}_{i=1}^G\right)} \\
+  s_i(\theta) &= \left( \frac{\pi_\theta(y_i | x)}{\pi_{\theta_{\text{old}}}(y_i | x)} \right)^{\frac{1}{|y_i|}} = \exp \left( \frac{1}{|y_i|} \sum_{t=1}^{|y_i|} \log \frac{\pi_\theta(y_{i,t} | x, y_{i,<t})}{\pi_{\theta_{\text{old}}}(y_{i,t} | x, y_{i,<t})} \right)
+  \end{align}
+  $$
+  
 
 ## RLHF中 为什么不对 loss 直接进行梯度下降来求解
 
